--- a/index.html
+++ b/index.html
@@ -22,48 +22,38 @@
 
 </head>
 <div>
-
-  <h3>Data Sensor Cuaca</h3>
-
-  <p id="cuaca">Memuat data...</p>
-
+    <h3>Data Sensor Cuaca Kota Cerdas</h3>
+    <p id="cuaca">Memuat data...</p>
 </div>
-
-
-
 <script>
-
-  const apiKey = '6ab51483fdc5265bca905c180b2369e4';
-
-  const city = 'Bandung';
-
-
-
-  fetch(`https://api.openweathermap.org/data/2.5/weather?q=city   appid={6ab51483fdc5265bca905c180b2369e4}&units=metric`)
-
-    .then(response => response.json())
-
-    .then(data => {
-
-      const suhu = data.main.temp;
-
-      const kelembapan = data.main.humidity;
-
-      document.getElementById("cuaca").innerText =
-
-        `Suhu: suhu°C, Kelembapan:{kelembapan}%`;
-
-    })
-
-    .catch(error => {
-
-      document.getElementById("cuaca").innerText = "Gagal mengambil data.";
-
-    });
-
+    // --- GANTI NILAI INI ---
+    const apiKey = '6ab51483fdc5265bca905c180b2369e4'; // << HARUS DIGANTI!
+    const city = 'Bekasi'; // << GANTI NAMA KOTA ANDA
+    // Konstruksi URL yang BENAR menggunakan Template Literal (backtick: `)
+    const apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`;
+    fetch(apiUrl)
+        .then(response => {
+            if (!response.ok) {
+                // Memberi pesan kesalahan jika API Key/Kota salah
+                throw new Error(`HTTP error! Status: ${response.status}. Cek kembali API Key dan nama kota.`);
+            }
+            return response.json();
+        })
+        .then(data => {
+            // Ambil data yang diperlukan
+            const suhu = data.main.temp;
+            const kelembapan = data.main.humidity;
+            const namaKota = data.name;
+            // Update elemen HTML menggunakan Template Literal yang BENAR
+            document.getElementById("cuaca").innerText =
+                `Lokasi: ${namaKota} | Suhu: ${suhu}°C | Kelembapan: ${kelembapan}%`;
+        })
+        .catch(error => {
+            // Tampilkan pesan kesalahan jika fetch gagal
+            document.getElementById("cuaca").innerText = `Gagal mengambil data. (${error.message})`;
+            console.error(error);
+        });
 </script>
-
-
 <body id="page-top">
 
     <!-- Page Wrapper -->
